# spare_parts_inventory

./: .env  .gitignore  .~lock.spare_parts_test_data.xlsx#  PARTS_CODING_GUIDELINES.md  README_TOOLING.md  USER_GUIDE.md  app.py  config.py  create_user.py  environment.yml  extensions.py  maintenance_models.py  maintenance_routes.py  models.py  permissions.py  pyproject.toml  requirements.orig.txt  requirements.txt  routes.py  run.sh  seed_maintenance.py  seed_tooling.py  spare_parts_test_data.csv  spare_parts_test_data.xlsx  spare_parts_test_data_2.xlsx  test_routes.py  ui_routes.py  utils.py
.github/workflows/: ci.yml  pytest.yml
README_ALL/: PARTS_CODING_GUIDELINES.md  README_IMPORT_EXPORT.md  SETUP_SERVER.md  USER_GUIDE_v3.md  deploy_vm_ubuntu (1).md  realistic_spare_parts_base.xlsx
README_ALL/old_manual/: INSTALL.md
migrations/: 20251021_tooling_full.sql
modules/: __init__.py
modules/maintenance/: __init__.py  models.py  repositories.py  routes.py  services.py
modules/spare_parts/: __init__.py  models.py  repositories.py  routes.py  services.py
modules/tooling/: __init__.py  models.py  repositories.py  routes.py  services.py
old_manual/: README.md
templates/: _flash.html  _module_switcher.html  _sidebar_maintenance.html  _sidebar_parts.html  add_part.html  base.html  edit_part.html  home.html  import.html  index.html  login.html  search_results.html  view_part.html
templates/maintenance/: checklist_template_form.html  checklist_templates_list.html  equipment_form.html  equipment_list.html  equipment_view.html  maintenance_plan_form.html  maintenance_plans_list.html  workorder_fill.html  workorder_view.html  workorders_list.html
templates/tooling/: event_form.html  import-tooling.html  import_placeholder.html  import_tooling.html  list_tooling.html  report_installed.html  report_service.html  search_results.html  (+2 more)
tests/: conftest.py  test_routes.py
tooling/: __init__.py  models_tooling.py  notuse_routes_tooling.py  routes_tooling.py
(+8 files in other folders)
